# arcgis-segment-brush

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: code_quality.yml
notes/: comp-review.md  idea.md  interactivity.md  interface.md  plan.md  scope.md  tech-stack.md  testing.md
src/segment_brush/: __init__.py  brush.py  feature_output.py  raster_io.py  segmentation.py
tests/: conftest.py  test_brush.py  test_feature_output.py  test_raster_io.py  test_segmentation.py
toolbox/: SegmentBrush.SegmentBrushTool.pyt.xml  SegmentBrush.pyt  SegmentBrush.pyt.xml  template.pyt
