[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "arcgis-segment-brush"
version = "0.1.0"
description = "Interactive paint-to-polygon segmentation tool for ArcGIS Pro"
readme = "README.md"
authors = [ { name = "charlesmerritt", email = "cem96047@uga.edu" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "numpy>=1.24",
  "pytest>=9.0.2",
  "scikit-image>=0.21",
  "scipy>=1.11",
  "shapely>=2",
]
urls.Changelog = "https://github.com/charlesmerritt/arcgis-segment-brush/blob/main/CHANGELOG.md"
urls.Homepage = "https://github.com/charlesmerritt/arcgis-segment-brush"
urls.Issues = "https://github.com/charlesmerritt/arcgis-segment-brush/issues"
urls.Repository = "https://github.com/charlesmerritt/arcgis-segment-brush"

[dependency-groups]
dev = [
  "commitizen>=4.11",
  "google-yamlfmt>=0.21",
  "mdformat>=0.7.22,<0.8",
  "mdformat-footnote>=0.1.2",
  "mdformat-frontmatter>=2.0.8",
  "mdformat-gfm>=1",
  "mdformat-gfm-alerts>=2",
  "mdformat-simple-breaks>=0.0.1",
  "prek>=0.3.1",
  "pyproject-fmt>=2.11.1",
  "ruff>=0.14.13",
  "ty>=0.0.12",
]
test = [ "pytest>=9.0.2" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/segment_brush" ]

[tool.ruff]
lint.extend-select = [ "I" ]
lint.task-tags = [ "FIX", "HACK", "NOTE", "PERF", "TEST", "TODO", "WARN" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
markers = [ "dev: marks tests that are currently developed" ]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
schema_pattern = "^(feat|fix|docs|chore|test|refactor|perf|ci|build|style)(\\((.*?)\\))?!?:\\s.+"
message_max_length = 72
